--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,17 @@
 body {
     /*FIRST SET OF COLOR*/
     --primary-color: rgb(60, 153, 145);
-    --highlight-color:rgb(20, 71, 100);
-    --background-color: rgb(7, 30, 36);
-    --light-color: rgb(209, 246, 255);
+    --highlight-color:rgb(201, 161, 0);
+    --background-color: rgb(229, 218, 190);
+    --light-color:rgb(205, 171, 70);
     --dark-color: rgb(13, 22, 24);
     --text-color: rgb(161, 161, 161);
 
     /*SECOND SET OF COLOR*/
-    --primary-color:rgb(156, 190, 198);
-    --secondary-color: rgb(37, 37, 37);
-    --background-color: rgb(19, 19, 19);
+    --primary-color:rgb(53, 53, 53);
+    --secondary-color: rgb(204, 201, 195);
+    --background-color: rgb(201, 192, 183);
+    --grid-color: rgb(187, 181, 181);
     --square-size: 100px;
 }
 
@@ -40,13 +41,13 @@ body {
     position: absolute;
     padding: 0;
     background: transparent;
-    background-image: linear-gradient(var(--secondary-color) .1em, transparent .1em), linear-gradient(90deg, var(--secondary-color) .1em, transparent .1em);
-    background-size: 3vw 3vw; /*size of one square*/
+    background-image: linear-gradient(var(--grid-color) .5px, transparent .5px), linear-gradient(90deg, var(--grid-color) .5px, transparent .5px);
+    background-size: 1.3vw 1.3vw; /*size of one square*/
     z-index: -1;
     margin-top: 120px;
     margin-bottom: 100px;
     width: calc(3vw*26 + .1em);
-    border-bottom: solid var(--secondary-color) 1.5px;
+    border-bottom: solid var(--grid-color) 0.5px;
 }
 
 .grid-index-2 {
@@ -136,37 +137,19 @@ button:hover {
     z-index: 3;
 }
 
-.btn-more:before {
-    content: '';
-    transition: .4s;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: var(--primary-color);
-    color: transparent;
-    left: -100%;
-    z-index: -500;
-}
-
-.btn-more:hover:before
-{
-    left: 0%; 
-}
-
 .btn-more:hover {
-    color: var(--background-color);
+    background-color: var(--background-color);
     font-weight: 500;
 }
 
 .btn1 {
-    border: solid 2px var(--light-color);
+    border: solid 1.5px var(--dark-color);
     background-color: var(--light-color);
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 500;
     font-size: .7vw;
-    color: var(--background-color);
+    color: var(--dark-color);
     border-radius: 0;
     padding: 10px;
     cursor: none;
@@ -176,8 +159,7 @@ button:hover {
 }
 
 .btn1:hover { 
-    background-color: transparent;
-    color: var(--light-color);
+    background-color: white;
 }
 
 #blog-section {
