--- a/css/page-index.css
+++ b/css/page-index.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     align-items: center;
     margin: 0;
-    margin-bottom: 60px;
     width: 70%;
     padding: 0 15px;
 }
@@ -29,12 +28,10 @@
 
 .grid-index-1 {
     bottom: 6vw;
-    border-bottom: solid var(--secondary-color) 1.5px;
 }
 
 #index-main-section {
     width: 75%;
-    margin-bottom: 6vw;
 }
 
 @media screen and (max-width: 1000px) {
@@ -72,3 +69,29 @@
     }
 }
 
+.project-window2 {
+    height: auto;
+    padding-top: 35px;
+    color: var(--light-color);
+}
+
+.icon-social-media {
+    filter: invert(96%) sepia(78%) saturate(3963%) hue-rotate(174deg) brightness(109%) contrast(100%);
+    width: 40px;
+    margin: 5px;
+}
+
+.icon-social-media:hover {
+    filter: invert(96%);
+}
+
+.grid-contact-1 {
+    margin-top: 120px;
+    margin-bottom: 100px;
+    /* width: calc(3vw*30 + .1em); */
+    height: calc(3vw * 10 + .1em);
+}
+
+#contact-section {
+    width: 75%;
+}
