--- a/css/project-window.css
+++ b/css/project-window.css
@@ -12,9 +12,9 @@
     margin: 10px;
     margin-top: 0;
     background-color: var(--dark-color);
-    border: solid 1px var(--light-color);
     overflow: hidden;
     position: relative;
+    border: solid var(--dark-color) 1.5px;
 }
 
 
@@ -90,7 +90,7 @@
     margin: 10px;
     margin-top: 0;
     background-color: var(--background-color);
-    border: solid 1px var(--light-color);
+    border: solid var(--dark-color) 1.5px;
     height: 300px;
     position: relative;
 }
