--- a/css/text.css
+++ b/css/text.css
@@ -1,29 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sarpanch:wght@900&display=swap");
 @font-face {
-  font-family: titleFont;
-  src: url("../font/OPTIVenus-BoldExtended.otf") format("otf");
+  font-family: 'CyGrotesk';
+  src: url("/font/CyGrotesk-WideDark.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 h1 {
-  font-family: "titleFont", sans-serif;
-  font-weight: 900;
-  font-size: 7vh;
+  font-family: 'CyGrotesk', sans-serif;
+  font-size: 3.5vh;
   color: var(--primary-color);
   margin-top: 30px;
-  line-height: 80%;
   margin-bottom: 5px;
+  text-transform: uppercase;
+}
+
+h1::before {
+  content: url('/img/asterix-icon.svg');
+  width: 3vh;
+  height: fit-content;
+  display: inline-block;
+  color: var(--text-color);
+  align-self: center;
+  vertical-align: middle;
+  margin-right: 5px;
 }
 
 h2 {
-  font-family: "Barlow", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
   font-size: 5vh;
   color: var(--secondary-color);
 }
 
 h3 {
-  font-family: "titleFont", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 800;
   font-size: 3vh;
   color: var(--primary-color);
@@ -31,9 +46,9 @@ h3 {
 }
 
 a {
-  font-family: "Poppins", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
-  color: var(--light-color);
+  color: var(--primary-color);
   cursor: none;
   font-size: 15px;
 }
@@ -48,7 +63,7 @@ a {
 }
 
 menu a {
-  background-color: var(--background-color);
+  background-color: var(--primary-color);
   padding: 10px;
   width: 100%;
   height: 100%;
@@ -61,16 +76,16 @@ menu a:hover {
 }
 
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 300;
   font-size: 15px;
-  color: var(--light-color);
+  color: var(--primary-color);
   line-height: 23px;
   margin-bottom: 1rem;
 }
 
 .project-window-title {
-  font-family: "Barlow";
+  font-family: "Nunito";
   font-weight: 550;
   color: var(--primary-color);
   text-decoration: none;
@@ -92,7 +107,9 @@ b {
   margin-right: 15px;
   font-family: "Poppins", sans-serif;
   font-size: 15px;
-  color: var(--light-color);
+  color: var(--primary-color);
+  padding-left: 5px;
+  margin-top: 5px;
 }
 
 b::after {
@@ -100,11 +117,12 @@ b::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 10px;
+  top: 0;
+  bottom: 0;
   width: calc(100% + 10px);
-  height: 15px;
+  background-color: var(--light-color);
+  border: solid 1.5px var(--dark-color);
   z-index: -1;
-  box-shadow: 0px 10px var(--highlight-color);
 }
 
 .text-highlight {
