--- a/css/text.css
+++ b/css/text.css
@@ -109,26 +109,27 @@ b {
   width: fit-content;
   position: relative;
   z-index: 3;
-  font-weight: 400;
-  margin-right: 15px;
-  font-family: "Poppins", sans-serif;
-  font-size: 15px;
+  font-weight: 700;
+  margin-right: 23px;
+  font-family: "Nunito", sans-serif;
+  font-size: 10px;
   color: var(--primary-color);
-  padding-left: 5px;
-  margin-top: 5px;
+  text-transform: uppercase;
 }
 
 b::after {
   display: block;
   content: "";
   position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: calc(100% + 10px);
+  left: -8px;
+  right: -8px;
+  top: -4px;
+  bottom: -4px;
   background-color: var(--light-color);
   border: solid 1.5px var(--dark-color);
   z-index: -1;
+  border-radius: 7px;
+  box-shadow: 0 3px var(--dark-color);
 }
 
 .text-highlight {
