--- a/css/page-index.css
+++ b/css/page-index.css
@@ -1,15 +1,45 @@
+#landing-section h1
+{
+    width: fit-content;
+    color: var(--light-color);
+    text-shadow: -2px 0 var(--primary-color), 0 2px var(--primary-color), 2px 0 var(--primary-color), 
+    0 -2px var(--primary-color), 0px 5px var(--background-color), 0px 6.5px var(--light-color);
+    background-color: transparent;
+    position: relative;
+}
+
+h1::before 
+{
+    display: none;
+}
+
+#landing-section h1::after
+{
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0px;
+    right: -8px;
+    top: 0;
+    bottom: 6px;
+    background-color: var(--light-color);
+    text-shadow: 0px 10px var(--light-color);
+    z-index: -1;
+} 
+
+
 #project-section {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
     margin: 0;
-    width: 70%;
+    width: 50%;
     padding: 0 15px;
 }
 
 #about-section {
-    width: 30%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -76,13 +106,8 @@
 }
 
 .icon-social-media {
-    filter: invert(96%) sepia(78%) saturate(3963%) hue-rotate(174deg) brightness(109%) contrast(100%);
     width: 40px;
     margin: 5px;
-}
-
-.icon-social-media:hover {
-    filter: invert(96%);
 }
 
 .grid-contact-1 {
