--- a/css/page-index.css
+++ b/css/page-index.css
@@ -1,11 +1,13 @@
 #landing-section h1
 {
     width: fit-content;
-    color: var(--light-color);
-    text-shadow: -2px 0 var(--primary-color), 0 2px var(--primary-color), 2px 0 var(--primary-color), 
-    0 -2px var(--primary-color), 0px 5px var(--background-color), 0px 6.5px var(--light-color);
+    text-shadow:  0px -2px var(--light-color), 0px -5px var(--light-color), 0px -7px var(--light-color), 0px 2.8px var(--background-color), 0px 4.5px var(--light-color);
     background-color: transparent;
     position: relative;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--primary-color);
+    margin-bottom: 0;
 }
 
 h1::before 
