--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -1,8 +1,6 @@
-
-/*PHOTOMONTAGE*/
-#photomontage-section, #td-section {
+#photomontage-section .div-row 
+{
     width: 100%;
-    margin-bottom: 100px;
 }
 
 #photomontage-section .div-column, #td-section .div-column {
@@ -22,7 +20,7 @@
     padding: 0 20px;
 }
 
-.grid-photomontage-1 {
+.grid-photomontage {
     margin-top: 120px;
     margin-bottom: 100px;
     width: calc(3vw*30 + .1em);
