--- a/css/navbar.css
+++ b/css/navbar.css
@@ -96,7 +96,7 @@ navbar {
   margin: auto;
   right: 0;
   left: 0;
-  width: calc(0.1em + 78vw);
+  width: 78vw;
   height: 50px;
   background-color: var(--light-color);
   border: solid var(--dark-color) 1.5px;
