--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
     position: absolute;
     padding: 0;
     background: transparent;
-    background-image: linear-gradient(var(--grid-color) .5px, transparent .5px), linear-gradient(90deg, var(--grid-color) .5px, transparent .5px);
+    background-image: linear-gradient(var(--grid-color) .05vw, transparent .05vw), linear-gradient(90deg, var(--grid-color) .05vw, transparent .05vw);
     background-size: 15px 15px; /*size of one square*/
     z-index: -1;
     margin-top: 120px;
@@ -147,7 +147,7 @@ button:hover {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 500;
-    font-size: .7vw;
+    font-size: 10px;
     color: var(--dark-color);
     border-radius: 0;
     padding: 10px;
